# lore-conv-eval-api

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
app/: config.py  main.py  schemas.py
app/adapters/: conversation_adapter.py
app/models/belief_classifier/: README.md  train_classifier.py
app/models/evidence_extractor/: .gitattributes  README.md  download_model.sh
app/services/: belief_mapper.py  classifier.py  dpr_longt5_rag.py  embedder.py  evidence.py  feature_store.py  graph_writer.py  mini_logreg.py  roberta_multitask.py  vector_store.py
data/label_runs/: heuristic.csv  llm.csv
infrastructure/docker/: Dockerfile  docker-compose.yml
infrastructure/k8s/: deployment.yaml  service.yaml
labeling_pipeline/: active_learning.py  config.py  heuristic.py  llm.py  merge.py  rules.py
scripts/: bootstrap_labels.py  bootstrap_model.sh  build_qdrant_index.py  run_active_loop.py  train_logreg.py
tests/integration/: test_api.py
tests/unit/: test_mapper.py
train_scripts/: train_roberta_multitask.py
