[tool.poetry]
name = "lore-conv-eval-api"
version = "0.1.0"
description = "Conversational Evaluation API for Lore panel interview"
authors = ["Caitlin Arnspiger <caitthedev@gmail.com>"]
packages = [
    { include = "app" },
    { include = "labeling_pipeline" }
]
readme = "README.md"
license = "MIT"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
torch  = "2.2.2"
accelerate = "^0.27"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
pydantic = "^2.7.0"
pydantic-settings = "^2.2"
datasets = "^2.19"
sentence-transformers = "^2.6.1"
transformers = "^4.40.0"
joblib = "^1.4.2"
openai = "^1.23.0"
scikit-learn = "^1.5.0"
pandas = "^2.2.2" 
tqdm = "^4.66.4"

neo4j = { version = "^5.19.0", optional = true }
pgvector = { version = "^0.2.5", optional = true }
qdrant-client = "^1.9"

[tool.poetry.extras]
# gpu = ["torch"]
graph = ["neo4j", "pgvector"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
